# kindling

./: .git-blame-ignore-revs  .gitignore  Cargo.toml  README.md  test_dicts.sh
.github/scripts/: star_history.py
.github/workflows/: release.yml  star-history.yml  test.yml
examples/: build_one.rs  gen_parity_cbz.rs  gen_parity_comic_epub.rs  gen_parity_fixtures.rs
rust/: Cargo.toml
rust/src/: comic.rs  epub.rs  exth.rs  kf8.rs  main.rs  mobi.rs  opf.rs  palmdoc.rs  tests.rs  vwi.rs
scripts/: regenerate_parity_fixtures.sh
src/: cbr.rs  cncx.rs  comic.rs  epub.rs  epub_build.rs  exth.rs  extracted.rs  fonts.rs  html_check.rs  indx.rs  kdp_rules.rs  kf8.rs  lib.rs  lookup.rs  main.rs  mobi.rs  mobi_check.rs  mobi_dump.rs  mobi_rewrite.rs  moire.rs  nav.rs  opf.rs  ordt.rs  palmdoc.rs  profile.rs  repair.rs  stardict.rs  tests.rs  validate.rs
src/checks/: content.rs  cover.rs  cross_refs.rs  css_forbidden.rs  dict.rs  file_case.rs  filenames.rs  fixed_layout.rs  helpers.rs  image_integrity.rs  images.rs  manifest_spine.rs  metadata.rs  mod.rs  nav_links.rs  navigation.rs  opf_grammar.rs  parse_encoding.rs  toc_extras.rs
tests/: cli.rs  cli_repair.rs  cli_rewrite_metadata.rs  cli_validate.rs  dict_languages.rs  epub_conformance.rs  epub_tests_corpus.rs  ja_dict.rs  kindlegen_parity.rs  lookup.rs  roundtrip.rs  stardict.rs
tests/common/: mod.rs
tests/fixtures/: test_comic.cbr  test_encrypted.cbr
tests/fixtures/book_with_errors/: book_with_errors.opf  content.html  toc.ncx
tests/fixtures/book_with_warnings/: book_with_warnings.opf  content.html  toc.ncx
(+155 files in other folders)
