[package]
name = "kindling-mobi"
version = "0.14.4"
edition = "2024"
rust-version = "1.85"
description = "Kindle MOBI/AZW3 builder for dictionaries, books, and comics. Drop-in kindlegen replacement."
license = "MIT"
repository = "https://github.com/ciscoriordan/kindling"
homepage = "https://github.com/ciscoriordan/kindling"
readme = "README.md"
keywords = ["kindle", "mobi", "azw3", "epub", "ebook"]
categories = ["command-line-utilities", "encoding", "multimedia"]

[lib]
name = "kindling"
path = "src/lib.rs"

[[bin]]
name = "kindling-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
image = "0.25"
memchr = "2"
quick-xml = "0.36"
rayon = "1.10"
regex = "1"
scraper = "0.26"
lightningcss = "1.0.0-alpha.71"
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = 3
lto = true
